--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- Header -->
+    <header>
+        <nav class="clearfix">
+            <div class="col col-logo">logo</div>
+            <div class="col col-menu-left">menu left</div>
+            <div class="col col-menu-right">menu right</div>
+            <div class="col col-start">start</div>
+        </nav>
+    </header>
+    <!-- End Header -->
+
+    <!-- Main -->
+    <main>
+        <div class="jumbotron"></div>
+    </main>
+    <!-- End Main -->
     
 </body>
 </html>
