--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
     <!-- Header -->
     <header>
         <nav class="clearfix">
-            <div class="col col-logo">logo</div>
-            <div class="col col-menu-left">menu left</div>
-            <div class="col col-menu-right">menu right</div>
-            <div class="col col-start">start</div>
+            <div class="col col-nav col-logo">logo</div>
+            <div class="col col-nav col-menu-left">menu left</div>
+            <div class="col col-nav col-menu-right">menu right</div>
+            <div class="col col-nav col-start">start</div>
         </nav>
     </header>
     <!-- End Header -->
 
     <!-- Main -->
     <main>
-        <div class="jumbotron"></div>
+        <div class="contain-jumbotron">
+            <div class="jumbotron">
+                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+        </div>    
     </main>
     <!-- End Main -->
     
