--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
         <div class="contain-jumbotron">
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.</p>
+                <div class="btn">
+                    <a href="#">Inizia la tua prova gratuita</a>
+                </div>
+                <div>Annulla in qualsiasi momento</div>
+                <div>&#8615;</div>
+                <div class="jumbotron-image"></div>
             </div>
         </div>    
     </main>
