--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <div class="col col-nav col-logo">logo</div>
             <div class="col col-nav col-menu-left">menu left</div>
             <div class="col col-nav col-menu-right">menu right</div>
-            <div class="col col-nav col-start">start</div>
+            <div class="col col-nav col-start">
+                <a class="btn" href="#">Inizia</a>
+            </div>
         </nav>
     </header>
     <!-- End Header -->
