add text col plans

--- a/index.html
+++ b/index.html
@@ -42,15 +42,75 @@
         </div>
         
         <div class="contain-plans">
-            <h1>Testo</h1>
+            <h2>Testo</h2>
             <span>Testo</span>
             <span>Testo</span>
             <span>Testo</span>
             <span>Testo</span>
             <div class="clearfix">
-                <div class="col col-plans col-professional"></div>
-                <div class="col col-plans col-standard"></div>
-                <div class="col col-plans col-advanced"></div>
+                <div class="col col-plans col-professional">
+                    <div>Singolo</div>
+                    <h3>Professional</h3>
+                    <div class="price">19,99 €</div>
+                    <div>/mese</div>
+                    <div>1 Utente</div>
+                    <div>3 TB di spazio di archiviazione sicuro</div>
+                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                    <div>
+                        <a href="#">Prova gratis per 30 giorni</a>
+                    </div>
+                    <div>oppure
+                        <a href="#">acquista ora</a>
+                    </div>
+                    <div>Punti salienti del piano</div>
+                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                    <div>Pulizia remota dell'account</div>
+                    <div>Filigrana documento</div>
+                    <div>Assistenza prioritaria via email e chat</div>
+                </div>
+                <div class="col col-plans col-standard">
+                    <div>Team</div>
+                    <h3>Standard</h3>
+                    <div class="price">19,99 €</div>
+                    <div>/mese</div>
+                    <div>1 Utente</div>
+                    <div>3 TB di spazio di archiviazione sicuro</div>
+                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                    <div>
+                        <a href="#">Prova gratis per 30 giorni</a>
+                    </div>
+                    <div>oppure
+                        <a href="#">acquista ora</a>
+                    </div>
+                    <div>Punti salienti del piano</div>
+                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                    <div>Pulizia remota dell'account</div>
+                    <div>Filigrana documento</div>
+                    <div>Assistenza prioritaria via email e chat</div>
+                </div>
+                <div class="col col-plans col-advanced">
+                    <div>Team</div>
+                    <h3>Advanced</h3>
+                    <div class="price">19,99 €</div>
+                    <div>/mese</div>
+                    <div>1 Utente</div>
+                    <div>3 TB di spazio di archiviazione sicuro</div>
+                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
+                    <div>
+                        <a href="#">Prova gratis per 30 giorni</a>
+                    </div>
+                    <div>oppure
+                        <a href="#">acquista ora</a>
+                    </div>
+                    <div>Punti salienti del piano</div>
+                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
+                    <div>Cartelle offline su dispositivi mobili</div>
+                    <div>Pulizia remota dell'account</div>
+                    <div>Filigrana documento</div>
+                    <div>Assistenza prioritaria via email e chat</div>
+                </div>
             </div>
         </div>
     </main>
