section 1 layout text completed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             </div>
         </div>
         
+        <!-- Section 1 -->
         <div class="contain-plans">
+
+            <!-- Subscription plans -->
             <h2>Testo</h2>
             <span>Testo</span>
             <span>Testo</span>
@@ -111,6 +114,17 @@
                     <div>Filigrana documento</div>
                     <div>Assistenza prioritaria via email e chat</div>
                 </div>
+            </div>
+
+            <!-- Enterprise -->
+            <div>
+                <div>Team</div>
+                <h3>Enterprise</h3>
+                <div>
+                    <a href="#">Contatta l'ufficio vendite</a>
+                </div>
+                <h4>Contatta l'ufficio vendite per i prezzi</h4>
+                <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</div>
             </div>
         </div>
     </main>
