--- a/index.html
+++ b/index.html
@@ -16,11 +16,37 @@
     <!-- Header -->
     <header>
         <nav class="clearfix">
-            <div class="col col-nav col-logo">logo</div>
-            <div class="col col-nav col-menu-left">menu left</div>
-            <div class="col col-nav col-menu-right">menu right</div>
+            <div class="col col-nav col-logo">
+                    <img class="logo-img" src="img/logo-small.png" alt="Dropbox Logo">
+            </div>
+            <div class="col col-nav col-menu-left">
+                <ul>
+                    <li>
+                        <a class="txt13" href="#">Perchè Dropbox?</a>
+                    </li>
+                    <li>
+                        <a class="txt13" href="#">Funzioni</a>
+                    </li>
+                    <li>
+                        <a class="txt13" href="#">Piani e Prezzi</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="col col-nav col-menu-right">
+                <ul>
+                    <li>
+                        <a class="txt13" href="#">Supporto</a>
+                    </li>
+                    <li>
+                        <a class="txt13" href="#">Contatta l'ufficio vendite</a>
+                    </li>
+                    <li>
+                        <a class="txt13" href="#">Accedi</a>
+                    </li>
+                </ul>
+            </div>
             <div class="col col-nav col-start">
-                <a class="btn" href="#">Inizia</a>
+                <a class="btn btn-blu" href="#">Inizia</a>
             </div>
         </nav>
     </header>
@@ -32,8 +58,8 @@
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
                 <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.</p>
-                <div class="btn">
-                    <a href="#">Inizia la tua prova gratuita</a>
+                <div class="box-btn">
+                    <a class="btn btn-blu" href="#">Inizia la tua prova gratuita</a>
                 </div>
                 <div>Annulla in qualsiasi momento</div>
                 <div><i class="fas fa-arrow-down"></i></div>
@@ -62,7 +88,7 @@
                     <div>
                         <a href="#">Prova gratis per 30 giorni</a>
                     </div>
-                    <div>oppure
+                    <div class="buynow">oppure
                         <a href="#">acquista ora</a>
                     </div>
                     <div>Punti salienti del piano</div>
@@ -83,7 +109,7 @@
                     <div>
                         <a href="#">Prova gratis per 30 giorni</a>
                     </div>
-                    <div>oppure
+                    <div class="buynow">oppure
                         <a href="#">acquista ora</a>
                     </div>
                     <div>Punti salienti del piano</div>
@@ -104,7 +130,7 @@
                     <div>
                         <a href="#">Prova gratis per 30 giorni</a>
                     </div>
-                    <div>oppure
+                    <div class="buynow">oppure
                         <a href="#">acquista ora</a>
                     </div>
                     <div>Punti salienti del piano</div>
