--- a/index.html
+++ b/index.html
@@ -22,26 +22,26 @@
             <div class="col col-nav col-menu-left">
                 <ul>
                     <li>
-                        <a class="txt13" href="#">Perchè Dropbox?</a>
+                        <a class="txt13 txtblack" href="#">Perchè Dropbox?</a>
                     </li>
                     <li>
-                        <a class="txt13" href="#">Funzioni</a>
+                        <a class="txt13 txtblack" href="#">Funzioni</a>
                     </li>
                     <li>
-                        <a class="txt13" href="#">Piani e Prezzi</a>
+                        <a class="txt13 txtblack" href="#">Piani e Prezzi</a>
                     </li>
                 </ul>
             </div>
             <div class="col col-nav col-menu-right">
                 <ul>
                     <li>
-                        <a class="txt13" href="#">Supporto</a>
+                        <a class="txt13 txtblack" href="#">Supporto</a>
                     </li>
                     <li>
-                        <a class="txt13" href="#">Contatta l'ufficio vendite</a>
+                        <a class="txt13 txtblack" href="#">Contatta l'ufficio vendite</a>
                     </li>
                     <li>
-                        <a class="txt13" href="#">Accedi</a>
+                        <a class="txt13 txtblack" href="#">Accedi</a>
                     </li>
                 </ul>
             </div>
@@ -57,13 +57,13 @@
         <div class="contain-jumbotron">
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.</p>
+                <p><div class="jumbotron-image"><img src="img/jumbo.png" alt=""></div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.
+                    </p>
                 <div class="box-btn">
                     <a class="btn btn-blu" href="#">Inizia la tua prova gratuita</a>
                 </div>
-                <div>Annulla in qualsiasi momento</div>
-                <div><i class="fas fa-arrow-down"></i></div>
-                <div class="jumbotron-image"></div>
+                <div class="txt11">Annulla in qualsiasi momento</div>
+                <i class="fas fa-arrow-down"></i>
             </div>
         </div>
         
