add symbol top col plans

--- a/index.html
+++ b/index.html
@@ -71,16 +71,17 @@
         <div class="contain-plans">
 
             <!-- Subscription plans -->
-            <h2>Testo</h2>
-            <span>Testo</span>
-            <span>Testo</span>
-            <span>Testo</span>
-            <span>Testo</span>
+            <h2>Trova il piano Dropbox Business che fa per te</h2>
+            <span class="inputradio"></span>
+            <span class="txt13">Fatturazione mensile</span>
+            <span class="inputradio"></span>
+            <span class="txt13">Fatturazione annuale</span>
             <div class="clearfix">
                 <div class="col col-plans col-professional">
-                    <div>Singolo</div>
-                    <h3>Professional</h3>
-                    <div class="price">19,99 €</div>
+                    <div class="top-col-plan txt13"><i class="far fa-user"></i> Singolo</div>
+                    <div class="cont-col">
+                        <h3>Professional</h3>
+                    <div class="price"><strong>19,99 €</strong></div>
                     <div>/mese</div>
                     <div>1 Utente</div>
                     <div>3 TB di spazio di archiviazione sicuro</div>
@@ -97,11 +98,13 @@
                     <div>Pulizia remota dell'account</div>
                     <div>Filigrana documento</div>
                     <div>Assistenza prioritaria via email e chat</div>
+                    </div>
+                    
                 </div>
                 <div class="col col-plans col-standard">
-                    <div>Team</div>
+                    <div class="top-col-plan txt13"><i class="far fa-building"></i> Team</div>
                     <h3>Standard</h3>
-                    <div class="price">19,99 €</div>
+                    <div class="price"><strong>19,99 €</strong></div>
                     <div>/mese</div>
                     <div>1 Utente</div>
                     <div>3 TB di spazio di archiviazione sicuro</div>
@@ -120,9 +123,9 @@
                     <div>Assistenza prioritaria via email e chat</div>
                 </div>
                 <div class="col col-plans col-advanced">
-                    <div>Team</div>
+                    <div class="top-col-plan txt13"><i class="far fa-building"></i> Team</div>
                     <h3>Advanced</h3>
-                    <div class="price">19,99 €</div>
+                    <div class="price"><strong>19,99 €</strong></div>
                     <div>/mese</div>
                     <div>1 Utente</div>
                     <div>3 TB di spazio di archiviazione sicuro</div>
