--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 </ul>
             </div>
             <div class="col col-nav col-start">
-                <a class="btn btn-blu" href="#">Inizia</a>
+                <a class="btn btn-small btn-blu" href="#">Inizia</a>
             </div>
         </nav>
     </header>
@@ -57,12 +57,11 @@
         <div class="contain-jumbotron">
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <p><div class="jumbotron-image"><img src="img/jumbo.png" alt=""></div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.
-                    </p>
-                <div class="box-btn">
-                    <a class="btn btn-blu" href="#">Inizia la tua prova gratuita</a>
-                </div>
-                <div class="txt11">Annulla in qualsiasi momento</div>
+                <p>
+                    <div class="jumbotron-image"><img src="img/jumbo.png" alt=""></div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.
+                </p>
+                <a class="btn btn-large btn-blu margin-bottom1" href="#">Inizia la tua prova gratuita</a>
+                <div class="txt12">Annulla in qualsiasi momento</div>
                 <i class="fas fa-arrow-down"></i>
             </div>
         </div>
@@ -76,84 +75,121 @@
             <span class="txt13">Fatturazione mensile</span>
             <span class="inputradio"></span>
             <span class="txt13">Fatturazione annuale</span>
+
+            <!-- Plans -->
             <div class="clearfix">
-                <div class="col col-plans col-professional">
+                <div class="col col-plans">
                     <div class="top-col-plan txt13"><i class="far fa-user"></i> Singolo</div>
                     <div class="cont-col">
                         <h3>Professional</h3>
-                    <div class="price"><strong>19,99 €</strong></div>
-                    <div>/mese</div>
-                    <div>1 Utente</div>
-                    <div>3 TB di spazio di archiviazione sicuro</div>
-                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
-                    <div>
-                        <a href="#">Prova gratis per 30 giorni</a>
-                    </div>
-                    <div class="buynow">oppure
-                        <a href="#">acquista ora</a>
-                    </div>
-                    <div>Punti salienti del piano</div>
-                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                    <div>Cartelle offline su dispositivi mobili</div>
-                    <div>Pulizia remota dell'account</div>
-                    <div>Filigrana documento</div>
-                    <div>Assistenza prioritaria via email e chat</div>
+                        <div class="price"><strong>19,99 €</strong></div>
+                        <div class="txtgrey txt12">/mese</div>
+                        <div>
+                            <ul class="included-offer">
+                                <li class="txt12"><i class="far fa-user"></i> 1 Utente
+                                </li>
+                                <li class="txt12"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro
+                                </li>
+                                <li class="txt12"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <div class="buynow txt12">oppure
+                            <a href="#">acquista ora</a>
+                        </div>
+                        <hr>
+                        <h5>Punti salienti del piano</h5>
+                        <div>
+                            <ul class="highlights txt12">
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
                     </div>
                     
                 </div>
                 <div class="col col-plans col-standard">
                     <div class="top-col-plan txt13"><i class="far fa-building"></i> Team</div>
-                    <h3>Standard</h3>
-                    <div class="price"><strong>19,99 €</strong></div>
-                    <div>/mese</div>
-                    <div>1 Utente</div>
-                    <div>3 TB di spazio di archiviazione sicuro</div>
-                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
-                    <div>
-                        <a href="#">Prova gratis per 30 giorni</a>
-                    </div>
-                    <div class="buynow">oppure
-                        <a href="#">acquista ora</a>
-                    </div>
-                    <div>Punti salienti del piano</div>
-                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                    <div>Cartelle offline su dispositivi mobili</div>
-                    <div>Pulizia remota dell'account</div>
-                    <div>Filigrana documento</div>
-                    <div>Assistenza prioritaria via email e chat</div>
-                </div>
-                <div class="col col-plans col-advanced">
-                    <div class="top-col-plan txt13"><i class="far fa-building"></i> Team</div>
-                    <h3>Advanced</h3>
-                    <div class="price"><strong>19,99 €</strong></div>
-                    <div>/mese</div>
-                    <div>1 Utente</div>
-                    <div>3 TB di spazio di archiviazione sicuro</div>
-                    <div>Funzioni di produttività premium e condivisione file semplice e sicura</div>
-                    <div>
-                        <a href="#">Prova gratis per 30 giorni</a>
-                    </div>
-                    <div class="buynow">oppure
-                        <a href="#">acquista ora</a>
-                    </div>
-                    <div>Punti salienti del piano</div>
-                    <div>Invia file fino a 100 GB con Dropbox Transfert</div>
-                    <div>Cartelle offline su dispositivi mobili</div>
-                    <div>Pulizia remota dell'account</div>
-                    <div>Filigrana documento</div>
-                    <div>Assistenza prioritaria via email e chat</div>
-                </div>
-            </div>
+                    <div class="cont-col">
+                        <h3>Standard</h3>
+                        <div class="price"><strong>19,99 €</strong></div>
+                        <div class="txtgrey txt12">/utente /mese, a partire da 3 utenti</div>
+                        <div>
+                            <ul class="included-offer">
+                                <li class="txt12"><i class="fas fa-user-plus"></i> 1 Utente
+                                </li>
+                                <li class="txt12"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro
+                                </li>
+                                <li class="txt12"><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file semplice e sicura
 
-            <!-- Enterprise -->
-            <div>
-                <div>Team</div>
-                <h3>Enterprise</h3>
-                <div>
-                    <a href="#">Contatta l'ufficio vendite</a>
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <div class="buynow txt12">oppure
+                            <a href="#">acquista ora</a>
+                        </div>
+                        <hr>
+                        <h5>Punti salienti del piano</h5>
+                        <div>
+                            <ul class="highlights txt12">
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                 </div>
-                <h4>Contatta l'ufficio vendite per i prezzi</h4>
-                <div>Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</div>
+                <div class="col col-plans">
+                    <div class="top-col-plan txt13"><i class="far fa-building"></i> Team</div>
+                    <div class="cont-col">
+                        <h3>Advanced</h3>
+                        <div class="price"><strong>19,99 €</strong></div>
+                        <div class="txtgrey txt12">/utente /mese, a partire da 3 utenti</div>
+                        <div>
+                            <ul class="included-offer">
+                                <li class="txt12"><i class="far fa-user"></i> 1 Utente
+                                </li>
+                                <li class="txt12"><i class="far fa-smile"></i></i> 3 TB di spazio di archiviazione sicuro
+                                </li>
+                                <li class="txt12"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file semplice e sicura
+                                </li>
+                            </ul>
+                        </div>
+                        <a class="btn btn-large btn-blu try-plan" href="#">Prova gratis per 30 giorni</a>
+                        <div class="buynow txt12">oppure
+                            <a href="#">acquista ora</a>
+                        </div>
+                        <hr>
+                        <h5>Punti salienti del piano</h5>
+                        <div>
+                            <ul class="highlights txt12">
+                                <li><i class="fas fa-check"></i> Invia file fino a 100 GB con Dropbox</li>
+                                <li><i class="fas fa-check"></i> Cartelle offline su dispositivi mobili</li>
+                                <li><i class="fas fa-check"></i> Pulizia remota dell'account</li>
+                                <li><i class="fas fa-check"></i> Filigrana documento</li>
+                                <li><i class="fas fa-check"></i> Assistenza prioritaria via email e chat</li>
+                            </ul>
+                        </div>
+                    </div>
+            </div>
+        </div>
+
+        <!-- Enterprise -->
+        <div class="contain-enterprise">
+            <div class="txt13"><i class="far fa-building"></i> Team</div>
+            <div class="enterprise"> 
+                <h3>Enterprise <a class="btn btn-large btn-blu" href="#">Contatta l'ufficio vendite</a></h3>
+                <h5>Contatta l'ufficio vendite per i prezzi</h5>
+                <p class="txt12">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>    
             </div>
         </div>
     </main>
