--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
 
     <!-- Main -->
     <main>
+
+        <!-- Jumbotron -->
         <div class="contain-jumbotron">
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
@@ -191,6 +193,62 @@
                 <h5>Contatta l'ufficio vendite per i prezzi</h5>
                 <p class="txt12">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.</p>    
             </div>
+        </div>
+
+        <!-- Section 2 -->
+        <div class="contain-partner clearfix">
+            <div class="col col-img">
+                <img src="img/partner.png" alt="">
+            </div>
+            <div class="col col-text">
+                <h3>Entra in contatto con un partner Dropbox</h3>
+                <p class="txt13">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzione e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                <a class="btn btn-large btn-white" href="#">Trova un partner</a>
+            </div>
+        </div>
+
+        <!-- Section 3 -->
+        <div class="contain-operations">
+            <h2>Esegui più operazioni con Dropbox Business</h2>
+            <div class="row1-operations clearfix">
+                <div class="col col-operations">
+                    <img src="img/business-feature-switching-tools.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                </div>
+                <div class="col col-operations-center">
+                    <img src="img/business-feature-coordinate-it.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+
+                </div>
+                <div class="col col-operations">
+                    <img src="img/business-feature-multi-device.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                </div>
+            </div>
+
+            <div class="row2-operations clearfix">
+                <div class="col col-operations">
+                    <img src="img/business-feature-integrations-it.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                </div>
+                <div class="col col-operations-center">
+                    <img src="img//business-feature-send-files-it.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+
+                </div>
+                <div class="col col-operations">
+                    <img src="img/business-feature-security.png" alt="">
+                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                </div>
+
+            </div>
+
         </div>
     </main>
     <!-- End Main -->
