--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                             </ul>
                         </div>
                         <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
-                        <div class="buynow txt12">oppure
+                        <div class="special-link txt12">oppure
                             <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
@@ -135,7 +135,7 @@
                             </ul>
                         </div>
                         <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
-                        <div class="buynow txt12">oppure
+                        <div class="special-link txt12">oppure
                             <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
@@ -172,7 +172,7 @@
                             </ul>
                         </div>
                         <a class="btn btn-large btn-white try-plan" href="https://www.dropbox.com/business/try">Prova gratis per 30 giorni</a>
-                        <div class="buynow txt12">oppure
+                        <div class="special-link txt12">oppure
                             <a href="https://www.dropbox.com/buy/professional?hs=1">acquista ora</a>
                         </div>
                         <hr>
@@ -204,6 +204,7 @@
         </div>
 
         <!-- Section 2 -->
+        <!-- Partner -->
         <div class="contain-partner clearfix">
             <div class="col col-img">
                 <img src="img/partner.png" alt="">
@@ -216,6 +217,7 @@
         </div>
 
         <!-- Section 3 -->
+        <!-- Operations -->
         <div class="contain-operations">
             <h2>Esegui più operazioni con Dropbox Business</h2>
             <div class="row1-operations clearfix">
@@ -256,6 +258,18 @@
                 </div>
             </div>
 
+            <!-- Section 4 -->">
+            <h2>Più di 500.000 Teams utilizzano Dropbox Business</h2>
+            <div class="special-link">
+                <a class="txt12" href="#">Scopri di più sui nostri clienti</a>
+            </div>
+        </div>
+
+        <!-- Logos Clients -->
+        <div class="clearfix">
+            <div class="col col-logos"></div>
+            <div class="col col-text"></div>
+            <div class="col col-logos"></div>
         </div>
     </main>
     <!-- End Main -->
