--- a/index.html
+++ b/index.html
@@ -311,6 +311,35 @@
                 </div>
             </div>
         </div>
+
+        <!-- Come in Dropbox -->
+        <div class="contain-cta">
+            <div class="cta">
+                <h2 class="cta-text">Porta Dropbox Business nella tua azienda.</h2>
+                <a class="btn btn-large btn-white" href="#">Inizia la tua prova gratuita</a>
+            </div>
+        </div>
+
+        <!-- FAQ -->
+        <div class="contain-faq">
+            <div class="faq">
+                <h2>Domande frequenti</h2>
+                <ul>
+                    <li class="txt12">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="txt12">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="txt12">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                    <li class="txt12">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?
+                        <i class="fas fa-chevron-down"></i>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </main>
     <!-- End Main -->
     
