--- a/index.html
+++ b/index.html
@@ -342,6 +342,120 @@
         </div>
     </main>
     <!-- End Main -->
+
+    <!-- Footer -->
+    <footer>
+            <div class="footer-menus clearfix">
+                <!-- List Dropbox -->
+                <div class="col footer-single-menu">
+                    <h5>Dropbox</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col footer-single-menu">
+                    <h5>Prodotti</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col footer-single-menu">
+                    <h5>Azienda</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col footer-single-menu">
+                    <h5>Supporto</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="col footer-single-menu">
+                    <h5>Community</h5>
+                    <ul>
+                        <li>
+                            <a href="#">Applicazione desktop</a>
+                        </li>
+                        <li>
+                            <a href="#">Perchè Dropbox</a>
+                        </li>
+                        <li>
+                            <a href="#">Piani</a>
+                        </li>
+                        <li>
+                            <a href="#">Sicurezza</a>
+                        </li>
+                        <li>
+                            <a href="#">Funzioni</a>
+                        </li>
+                    </ul>
+                </div>
+
+                <hr class="line-footer">
+            </div>
+    </footer>
+    <!-- End Footer -->
     
 </body>
 </html>
