--- a/index.html
+++ b/index.html
@@ -452,7 +452,13 @@
                     </ul>
                 </div>
 
-                <hr class="line-footer">
+                <hr>
+
+                <div class="languages">
+                    <i class="fas fa-globe-europe"></i>
+                    Italiano
+                    <i class="fas fa-angle-down"></i>
+                </div>
             </div>
     </footer>
     <!-- End Footer -->
