--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
 
                 <hr>
 
-                <div class="languages">
+                <div class="languages txt12">
                     <i class="fas fa-globe-europe"></i>
                     Italiano
                     <i class="fas fa-angle-down"></i>
