--- a/index.html
+++ b/index.html
@@ -206,63 +206,61 @@
             <!-- Section 2 -->
             <!-- Partner -->
             <div class="contain-partner clearfix">
-            <div class="col col-img">
-                <img src="img/partner.png" alt="">
-            </div>
-            <div class="col col-text">
-                <h3>Entra in contatto con un partner Dropbox</h3>
-                <p class="txt13">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzione e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
-                <a class="btn btn-large btn-white" href="https://www.dropbox.com/it/business/partners">Trova un partner</a>
-            </div>
+                <div class="col col-img">
+                    <img src="img/partner.png" alt="">
+                </div>
+                <div class="col col-text">
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p class="txt13">Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzione e i servizi necessari per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.</p>
+                    <a class="btn btn-large btn-white" href="https://www.dropbox.com/it/business/partners">Trova un partner</a>
+                </div>
             </div>
 
             <!-- Section 3 -->
             <!-- Operations -->
             <div class="contain-operations">
-            <h2>Esegui più operazioni con Dropbox Business</h2>
-            <div class="row1-operations clearfix">
-                <div class="col col-operations">
-                    <img src="img/business-feature-switching-tools.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="row1-operations clearfix">
+                    <div class="col col-operations">
+                        <img src="img/business-feature-switching-tools.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e <u>Dropbox Paper</u> direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col col-operations-center">
+                        <img src="img/business-feature-coordinate-it.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col col-operations">
+                        <img src="img/business-feature-multi-device.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                 </div>
-                <div class="col col-operations-center">
-                    <img src="img/business-feature-coordinate-it.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
 
-                </div>
-                <div class="col col-operations">
-                    <img src="img/business-feature-multi-device.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                <div class="row2-operations clearfix">
+                    <div class="col col-operations">
+                        <img src="img/business-feature-integrations-it.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col col-operations-center">
+                        <img src="img//business-feature-send-files-it.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
+                    <div class="col col-operations">
+                        <img src="img/business-feature-security.png" alt="">
+                        <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
+                        <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
+                    </div>
                 </div>
             </div>
 
-            <div class="row2-operations clearfix">
-                <div class="col col-operations">
-                    <img src="img/business-feature-integrations-it.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
-                </div>
-                <div class="col col-operations-center">
-                    <img src="img//business-feature-send-files-it.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
-
-                </div>
-                <div class="col col-operations">
-                    <img src="img/business-feature-security.png" alt="">
-                    <h3 class="margin-operations-h3">Passa di meno da uno strumento all'altro</h3>
-                    <p class="txt12">Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.</p>
-                </div>
-            </div>
-
-            <!-- Section 4 -->">
+            <!-- Section 4 -->
             <h2>Più di 500.000 Teams utilizzano Dropbox Business</h2>
             <div class="special-link">
                 <a class="txt12" href="#">Scopri di più sui nostri clienti</a>
-            </div>
             </div>
         </div>
 
