--- a/index.html
+++ b/index.html
@@ -59,7 +59,12 @@
         <div class="contain-jumbotron">
             <div class="jumbotron">
                 <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
-                <p><div class="jumbotron-image"><img src="img/jumbo.png" alt=""></div>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.</p>
+                <p>
+                    <div class="jumbotron-image">
+                        <img src="img/jumbo.png" alt="">
+                    </div>
+                    Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto. Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e integrato per ottimizzare per orrimizzare il flusso di lavoro esistente.
+                </p>
                 <a class="btn btn-large btn-blu margin-bottom1" href="https://www.dropbox.com/business/try">Inizia la tua prova gratuita</a>
                 <div class="txt12">Annulla in qualsiasi momento</div>
                 <i class="fas fa-arrow-down"></i>
